# fp32-fsw-xmera

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_a.sh  build_all.sh  clean.sh  conftest.py  riscv32-toolchain.cmake
algorithms/: CMakeLists.txt  docsTemplate.tex
algorithms/attTrackingError/: CMakeLists.txt  attTrackingError.cpp  attTrackingError.h  attTrackingError.rst  attTrackingErrorAlgorithm.cpp  attTrackingErrorAlgorithm.h  attTrackingErrorAlgorithm_c.cpp  attTrackingErrorAlgorithm_c.h  attTrackingErrorF32.i  attTrackingErrorTypes.h  riscv_utils.cpp
algorithms/averageMimuData/: CMakeLists.txt  averageMimuData.cpp  averageMimuData.h  averageMimuData.rst  averageMimuDataAlgorithm.cpp  averageMimuDataAlgorithm.h  averageMimuDataAlgorithm_c.cpp  averageMimuDataAlgorithm_c.h  averageMimuDataF32.i  averageMimuDataTypes.h
algorithms/bodyRateMiscompare/: CMakeLists.txt  bodyRateMiscompare.cpp  bodyRateMiscompare.h  bodyRateMiscompare.rst  bodyRateMiscompareAlgorithm.cpp  bodyRateMiscompareAlgorithm.h  bodyRateMiscompareAlgorithm_c.cpp  bodyRateMiscompareAlgorithm_c.h  bodyRateMiscompareF32.i  bodyRateMiscompareTypes.h
algorithms/celestialTwoBodyPoint/: CMakeLists.txt  celestialTwoBodyPoint.cpp  celestialTwoBodyPoint.h  celestialTwoBodyPoint.i  celestialTwoBodyPoint.rst  celestialTwoBodyPointAlgorithm.cpp  celestialTwoBodyPointAlgorithm.h  celestialTwoBodyPointAlgorithm_c.cpp  celestialTwoBodyPointAlgorithm_c.h  celestialTwoBodyPointF32.i  celestialTwoBodyPointTypes.h
algorithms/convertStPlatformToBody/: CMakeLists.txt  convertStPlatformToBody.cpp  convertStPlatformToBody.h  convertStPlatformToBody.rst  convertStPlatformToBodyAlgorithm.cpp  convertStPlatformToBodyAlgorithm.h  convertStPlatformToBodyAlgorithm_c.cpp  convertStPlatformToBodyAlgorithm_c.h  convertStPlatformToBodyF32.i  convertStPlatformToBodyTypes.h
algorithms/cssComm/: CMakeLists.txt  cssComm.cpp  cssComm.h  cssComm.i  cssComm.rst  cssCommAlgorithm.cpp  cssCommAlgorithm.h  cssCommAlgorithm_c.cpp  cssCommAlgorithm_c.h  cssCommF32.i  cssCommTypes.h
algorithms/dvAccumulation/: CMakeLists.txt  dvAccumulation.cpp  dvAccumulation.h  dvAccumulation.i  dvAccumulation.rst  dvAccumulationAlgorithm.cpp  dvAccumulationAlgorithm.h  dvAccumulationAlgorithm_c.cpp  dvAccumulationAlgorithm_c.h  dvAccumulationF32.i  dvAccumulationTypes.h
algorithms/dvGuidance/: CMakeLists.txt  dvGuidance.cpp  dvGuidance.h  dvGuidance.i  dvGuidance.rst  dvGuidanceAlgorithm.cpp  dvGuidanceAlgorithm.h  dvGuidanceAlgorithm_c.cpp  dvGuidanceAlgorithm_c.h  dvGuidanceF32.i  dvGuidanceTypes.h
algorithms/ephemNavConverter/: CMakeLists.txt  ephemNavConverter.cpp  ephemNavConverter.h  ephemNavConverter.rst  ephemNavConverterAlgorithm.cpp  ephemNavConverterAlgorithm.h  ephemNavConverterAlgorithm_c.cpp  ephemNavConverterAlgorithm_c.h  ephemNavConverterF32.i  ephemNavConverterTypes.h
algorithms/ephemeridesRecenter/: CMakeLists.txt  ephemeridesRecenter.cpp  ephemeridesRecenter.h  ephemeridesRecenter.i  ephemeridesRecenter.rst  ephemeridesRecenterAlgorithm.cpp  ephemeridesRecenterAlgorithm.h  ephemeridesRecenterAlgorithm_c.cpp  ephemeridesRecenterAlgorithm_c.h  ephemeridesRecenterF32.i  ephemeridesRecenterTypes.h
algorithms/filteringCore/: CMakeLists.txt  concepts.hpp  dynamicsModel.hpp  filteringCore.rst  kalmanFilter.hpp  measurementQueue.h  srukf.hpp  state.hpp
algorithms/flybyPoint/: CMakeLists.txt  flybyPoint.cpp  flybyPoint.h  flybyPoint.i  flybyPoint.rst  flybyPointAlgorithm.cpp  flybyPointAlgorithm.h  flybyPointAlgorithm_c.cpp  flybyPointAlgorithm_c.h  flybyPointF32.i  flybyPointTypes.h
algorithms/forceTorqueThrForceMapping/: CMakeLists.txt  forceTorqueThrForceMapping.cpp  forceTorqueThrForceMapping.h  forceTorqueThrForceMapping.i  forceTorqueThrForceMapping.rst  forceTorqueThrForceMappingAlgorithm.cpp  forceTorqueThrForceMappingAlgorithm.h  forceTorqueThrForceMappingAlgorithm_c.cpp  forceTorqueThrForceMappingAlgorithm_c.h  forceTorqueThrForceMappingF32.i  forceTorqueThrForceMappingTypes.h
algorithms/hillPoint/: CMakeLists.txt  hillPoint.cpp  hillPoint.h  hillPoint.i  hillPoint.rst  hillPointAlgorithm.cpp  hillPointAlgorithm.h  hillPointAlgorithm_c.cpp  hillPointAlgorithm_c.h  hillPointF32.i  hillPointTypes.h
algorithms/inertial3D/: CMakeLists.txt  inertial3D.cpp  inertial3D.h  inertial3D.i  inertial3D.rst  inertial3DAlgorithm.cpp  inertial3DAlgorithm.h  inertial3DAlgorithm_c.cpp  inertial3DAlgorithm_c.h  inertial3DF32.i  inertial3DTypes.h
algorithms/inertialSRuKF/: CMakeLists.txt  inertialSRuKF.cpp  inertialSRuKF.h  inertialSRuKF.rst  inertialSRuKFAlgorithm.cpp  inertialSRuKFAlgorithm.h  inertialSRuKFF32.i  inertialSRuKFSpecs.h
algorithms/inertialUKF/: CMakeLists.txt  inertialUKF.cpp  inertialUKF.h  inertialUKFAlgorithm.cpp  inertialUKFAlgorithm.h  inertialUKFAlgorithm_c.cpp  inertialUKFAlgorithm_c.h  inertialUKFF32.i
algorithms/mimuMajorityVote/: CMakeLists.txt  mimuMajorityVote.cpp  mimuMajorityVote.h  mimuMajorityVote.rst  mimuMajorityVoteAlgorithm.cpp  mimuMajorityVoteAlgorithm.h  mimuMajorityVoteAlgorithm_c.cpp  mimuMajorityVoteAlgorithm_c.h  mimuMajorityVoteF32.i  mimuMajorityVoteTypes.h
algorithms/mrpFeedback/: CMakeLists.txt  mrpFeedback.cpp  mrpFeedback.h  mrpFeedback.i  mrpFeedback.rst  mrpFeedbackAlgorithm.cpp  mrpFeedbackAlgorithm.h  mrpFeedbackAlgorithm_c.cpp  mrpFeedbackAlgorithm_c.h  mrpFeedbackF32.i  mrpFeedbackTypes.h
algorithms/mrpPD/: CMakeLists.txt  mrpPD.cpp  mrpPD.h  mrpPD.i  mrpPD.rst  mrpPDAlgorithm.cpp  mrpPDAlgorithm.h  mrpPDAlgorithm_c.cpp  mrpPDAlgorithm_c.h  mrpPDF32.i  mrpPDTypes.h
algorithms/mrpRotation/: CMakeLists.txt  mrpRotation.cpp  mrpRotation.h  mrpRotation.i  mrpRotation.rst  mrpRotationAlgorithm.cpp  mrpRotationAlgorithm.h  mrpRotationAlgorithm_c.cpp  mrpRotationAlgorithm_c.h  mrpRotationF32.i  mrpRotationTypes.h
algorithms/mrpSteering/: CMakeLists.txt  mrpSteering.cpp  mrpSteering.h  mrpSteering.i  mrpSteering.rst  mrpSteeringAlgorithm.cpp  mrpSteeringAlgorithm.h  mrpSteeringAlgorithm_c.cpp  (+3 more)
(+573 files in other folders)
