add_subdirectory(msgPayloadDef)
add_subdirectory(utilities)

add_subdirectory(attTrackingError)
add_subdirectory(averageMimuData)
add_subdirectory(bodyRateMiscompare)
add_subdirectory(celestialTwoBodyPoint)
add_subdirectory(ephemeridesRecenter)
add_subdirectory(ephemNavConverter)
add_subdirectory(inertial3D)
add_subdirectory(inertialUKF)
add_subdirectory(mimuMajorityVote)
add_subdirectory(mrpFeedback)
add_subdirectory(mrpPD)
add_subdirectory(mrpSteering)
add_subdirectory(navAggregate)
add_subdirectory(oeStateEphem)
add_subdirectory(rateControl)
add_subdirectory(rwMotorTorque)
add_subdirectory(rwMotorVoltage)
add_subdirectory(rwNullSpace)
add_subdirectory(stepperMotorController)
add_subdirectory(sunlineEphem)
add_subdirectory(sunlineSRuKF)
add_subdirectory(sunSearch)
add_subdirectory(sunTrackError)
add_subdirectory(thrFiringSchmitt)
