add_subdirectory(msgPayloadDef)
add_subdirectory(utilities)

add_subdirectory(attTrackingError)
add_subdirectory(averageMimuData)
add_subdirectory(bodyRateMiscompare)
add_subdirectory(celestialTwoBodyPoint)
add_subdirectory(convertStPlatformToBody)
add_subdirectory(cssComm)
add_subdirectory(dvGuidance)
add_subdirectory(ephemeridesRecenter)
add_subdirectory(flybyPoint)
add_subdirectory(forceTorqueThrForceMapping)
add_subdirectory(hillPoint)
add_subdirectory(inertial3D)
add_subdirectory(inertialUKF)
add_subdirectory(mimuMajorityVote)
add_subdirectory(mrpFeedback)
add_subdirectory(mrpPD)
add_subdirectory(mrpRotation)
add_subdirectory(mrpSteering)
add_subdirectory(navAggregate)
add_subdirectory(oeStateEphem)
add_subdirectory(rateControl)
add_subdirectory(rwMotorTorque)
add_subdirectory(rwMotorVoltage)
add_subdirectory(rwNullSpace)
add_subdirectory(solarArrayReference)
add_subdirectory(stepperMotorController)
add_subdirectory(sunlineEphem)
add_subdirectory(sunlineSRuKF)
add_subdirectory(sunSafePoint)
add_subdirectory(sunSearch)
add_subdirectory(sunTrackError)
add_subdirectory(thrFiringRemainder)
add_subdirectory(thrFiringSchmitt)
